# SATC

./: .gitignore  AGENTS.md  PILOT_CHECKLIST.md  README.md  Setup Tax Document Sorter.bat  Start Tax Document Sorter.bat  Start Tax Document Sorter.vbs  TEMPLATE_AUTHORING_GUIDE.md  app.bundle.js  app.js  app.py  automationExport.js  automationGenerator.js  automationStorage.js  batch.py  build_app.py  build_windows.bat  categorizer.py  cert_sign.py  checklist.py  clients_editor.py  compose_emails.py  core.py  create_demo_data.py  dashboard.py  diagnostics.py  excel_report.py  export_encyro.py  extract_form_data.py  fee_workbook.py  generate_documents.py  import_clients.py  index.html  intake.py  invoice_calc.py  main.py  markdownExport.js  package.json  packet_reader.py  pandas.py  (+53 more)
consumer-portfolio-analytics/: .gitignore  README.md  pyproject.toml
consumer-portfolio-analytics/configs/: default_thresholds.json
consumer-portfolio-analytics/src/ucpa/: __init__.py  cli.py  data_model.py  engine.py  excel_report.py  findings_template.py  observations.py  thresholds.py  tier_detector.py
consumer-portfolio-analytics/tests/: conftest.py  test_end_to_end.py  test_generator.py  test_metrics_correctness.py  test_metrics_golden.py  test_observations.py  test_thresholds.py  test_tier_detector.py
credit-benchmark-workbench/pipeline/: pyproject.toml
credit-benchmark-workbench/pipeline/tests/: conftest.py  test_adjust.py  test_benchmarks.py  test_dedupe.py  test_integration.py  test_metrics.py  test_overlay.py  test_panel.py  test_parse.py  test_tags.py  test_validate.py
credit-redflag-monitor/: .gitignore  README.md  pyproject.toml  redflag_monitor.py
credit-redflag-monitor/examples/: signal_dictionary.csv
credit-redflag-monitor/src/redflag_monitor/: __init__.py  cli.py  config.py  demo.py  excel_writer.py  fred.py  history.py  metrics.py  monitor.py  seed.py
credit-redflag-monitor/tests/: test_config.py  test_fred.py  test_metrics.py  test_monitor.py  test_persistence.py
credit_packet/: .env.example  README.md  bootstrap.py  pyproject.toml  run_sample.py
credit_packet/examples/: sample_packet.md
credit_packet/src/bs4/: __init__.py
credit_packet/src/credit_packet/: changes.py  cik_lookup.py  cli.py  config.py  evidence.py  excel_render.py  excel_schema.py  excel_view_model.py  excerpts.py  facts.py  filing_text.py  filings.py  llm.py  llm_validate.py  metrics.py  models.py  packet.py  render.py  rules.py  sec_client.py  sections.py  storage.py
credit_packet/src/dotenv/: __init__.py
credit_packet/tests/: test_changes_sections.py  test_cli_extensions.py  test_core.py  test_evidence_and_llm.py  test_excel_output.py  test_facts_rules_metrics.py  test_filing_parsing.py  test_guardrail_phrases.py  test_metrics.py  test_packet.py  test_render_and_guardrail.py  test_rules.py  test_setup_and_docs.py
drake-entry-assistant/: README.md  pyproject.toml
drake-entry-assistant/docs/: manual_drake_acceptance_checklist.md
drake-entry-assistant/examples/: README.md
drake-entry-assistant/src/dea/: __init__.py  action_plan.py  cli.py  config_loader.py  demo.py  excel_loader.py  logging_utils.py  masking.py  models.py  output.py  validation.py
drake-entry-assistant/tests/: test_action_plan.py  test_cli.py  test_config_loader.py  test_demo.py  test_discovery.py  test_excel_loader.py  test_fake_adapter.py  test_imports.py  test_integration_dry_run_fake.py  test_logging_utils.py  test_masking.py  test_milestone_workflow.py  test_models.py  test_real_adapter_stub.py  test_validation.py
edgar-assumptions/: .gitignore  Makefile  README.md  edgar_assumptions.py  pyproject.toml  run.bat  run.sh
edgar-assumptions/examples/: README.md  generate_examples.py  sample_food_dist.csv  sample_food_dist.summary.md
edgar-assumptions/satc_edgar/: __init__.py  aggregate.py  cli.py  concepts.py  fetch.py  metrics.py  output.py  pipeline.py  selftest.py  stats.py
edgar-assumptions/tests/: conftest.py  fixtures.py  test_aggregate.py  test_metrics.py  test_pipeline.py
satc_system/: .gitignore  ARCHITECTURE.md  README.md  SATC.bat  SATC.command  SATC.sh  install.bat  install.command  install.sh  pyproject.toml
satc_system/configs/: classification.yaml
satc_system/configs/comms/: cover_letter.txt  delivery_email.txt
satc_system/configs/extraction/: 1099div.yaml  1099int.yaml  k1_1065.yaml  k1_1120s.yaml  prior_1040.yaml  w2.yaml
satc_system/configs/line_sheets/: 1040.yaml  1065.yaml  1120.yaml  1120S.yaml
satc_system/configs/workflows/: business_monthly_bookkeeping.yaml  business_partnership_tax.yaml  business_scorp_tax.yaml  business_year_end_cleanup.yaml  new_client_onboarding.yaml  (+3 more)
satc_system/docs/: DATA_MODEL.md  MCP.md  METHODOLOGY.md  USER_GUIDE.md
satc_system/packaging/: README.md  entry.py  satc_app.spec
satc_system/scripts/: build_workbook.py  export_pdf.py
satc_system/tests/: conftest.py  test_api_tools.py  test_app.py  test_app_intake_flow.py  test_app_polish.py  test_audit_tape.py  test_build.py  test_classify.py  test_crosswalk.py  test_doctor.py  test_drake.py  test_foundation.py  test_importer.py  test_ingest.py  test_input_generator.py  test_intake.py  test_intake_matching.py  test_intake_organizer_outputs.py  test_intake_outputs.py  test_intake_reconcile_flow.py  test_intake_service.py  test_local_readers.py  test_mcp_server_and_entry.py  test_paystub_layout.py  test_paystub_reader.py  test_paystub_templates.py  test_persistence.py  test_post.py  test_proforma.py  test_readers.py  test_review_fixes.py  test_sort.py  test_split.py  test_staging_edits.py  test_store_sample.py  test_text_anchor.py  test_validation.py  test_withholding_app.py  test_withholding_engine.py  test_workflow_configs.py  (+2 more)
src/: app.js  (+5 more)
tax-withholding-estimator/: .gitignore  README.md  pyproject.toml  run.bat
tax-withholding-estimator/examples/: make_verification_sheet.py  sample_input.json  tax_verify_2025.xlsx
tax-withholding-estimator/tests/: test_cli.py  test_engine.py  test_models.py  test_paystub.py  test_paystub_endpoints.py  test_profiles.py  test_server.py  test_tax_data.py
(+431 files in other folders)
