[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ucpa"
version = "0.1.0"
description = "Unsecured Consumer Portfolio Asset-Quality Analytics Engine (Phase 1: credit cards)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ucpa-review = "ucpa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
