[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-redflag-monitor"
version = "0.1.0"
description = "Deterministic, config-driven consumer-credit red-flag monitor over FRED external signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
redflag-monitor = "redflag_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
