[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-packet"
version = "0.1.0"
description = "Local-first public-company credit research packet builder"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pandas>=2.2",
  "pydantic>=2.7",
  "typer>=0.12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
