[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satc-system"
version = "0.1.0"
description = "SATC tax line-sheet system, client data mart, and Drake-adjacent tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "flask>=3.0",
  "pypdf>=4.0",
  "reportlab>=4.0",
]
# Document readers. The vision backend needs the Anthropic SDK; the free PDF
# form-field backend needs pypdf. Neither is required for the rest of the system.
vision = [
  "anthropic>=0.40",
]
pdf = [
  "pypdf>=4.0",
]
# Local OCR for scans/photos — fully on-machine (also needs the Tesseract binary).
ocr = [
  "pytesseract>=0.3",
  "Pillow>=10",
]
# Local hand-holding GUI (opens in the browser).
app = [
  "flask>=3.0",
]
# Everything for the easy, fully-local install (GUI + PDF + OCR). No cloud deps.
local = [
  "flask>=3.0",
  "pypdf>=4.0",
  "reportlab>=4.0",
  "pytesseract>=0.3",
  "Pillow>=10",
]

[project.scripts]
satc = "satc.cli:main"
satc-app = "satc.app.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
